fix style content overflow hidden

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1959,8 +1959,6 @@ input[type="range"]::-moz-range-thumb {
     border-radius: 8px;
     padding: 20px;
     box-shadow: var(--shadow-sm);
-    overflow-x: hidden;
-
 }
 
 .breadcrumbs {
